syntax = "proto3";

package orderservice;

option go_package = "pb/orderService;orderservice";

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_price = 4;
  string status = 5;
  string created_at = 6;
}

message CreateOrderRequest {
  Order order = 1;
}
message CreateOrderResponse {
  Order order = 1;
  string message = 2;
}

message GetOrderRequest {
  string id = 1;
}
message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  int32 skip = 1;
  int32 limit = 2;
}
message ListOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  Order order = 1;
}
message UpdateOrderResponse {
  Order order = 1;
  string message = 2;
}

message DeleteOrderRequest {
  string id = 1;
}
message DeleteOrderResponse {
  string message = 1;
}


message CartItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message AddToCartRequest {
  CartItem item = 1;
}
message AddToCartResponse {
  string message = 1;
}

message ViewCartRequest {}
message ViewCartResponse {
  repeated CartItem items = 1;
  double total = 2;
}

message CheckoutRequest {
  string card_number = 1;
  string expiry = 2;
  string cvv = 3;
}
message CheckoutResponse {
  string order_id = 1;
  double total_price = 2;
  string message = 3;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);

  //Cart RPC methods:
  rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
  rpc ViewCart(ViewCartRequest) returns (ViewCartResponse);
  rpc Checkout(CheckoutRequest) returns (CheckoutResponse);
}
